Expand ch56/63/66 to meet interview chapter minimums
- ch56: 1345->1712 lines, ch63: 921->2287 lines, ch66: 770->1518 lines
- All 11 interview chapters (56-66) now meet 1500-line minimum